--- a/argocdod/apps/minio-operator/templates/secrets.yaml
+++ b/argocdod/apps/minio-operator/templates/secrets.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 Kind: Secret
 metadata:
-  name: {{ .values.name }}
-  namespace: {{ .values.namespace }}
+  name: {{ .Values.name }}
+  namespace: {{ .Values.namespace }}
   labels:
-    app: {{ .values.name }}
+    app: {{ .Values.name }}
 type: Opaque
 data:
-  accesskey: {{ if .values.accesskey }}{{ .values.accesskey | b64enc | quote }}{{ else }}{{randAlphaNum 20 |  b64enc | quote}}{{ end }}
-  secretkey: {{ if .values.secretkey }}{{ .values.secretkey | b64enc | quote }}{{ else }}{{randAlphaNum 20 |  b64enc | quote}}{{ end }}
+  accesskey: {{ if .Values.accesskey }}{{ .Values.accesskey | b64enc | quote }}{{ else }}{{randAlphaNum 20 |  b64enc | quote}}{{ end }}
+  secretkey: {{ if .Values.secretkey }}{{ .Values.secretkey | b64enc | quote }}{{ else }}{{randAlphaNum 20 |  b64enc | quote}}{{ end }}
