--- a/argocdod/apps/minio-operator/templates/minioinstance.yaml
+++ b/argocdod/apps/minio-operator/templates/minioinstance.yaml
@@ -1,5 +1,5 @@
 apiVersion: miniocontroller.min.io/v1beta1
-Kind: minioinstance
+Kind: Deployment
 metadata:
   name: {{ .Values.name }}
   namespace: {{ .Values.namespace }}
