--- a/argocdod/apps/minio-operator/templates/minio-scc.yaml
+++ b/argocdod/apps/minio-operator/templates/minio-scc.yaml
@@ -29,7 +29,7 @@ supplementalGroups:
   type: RunAsAny
 users:
 - system:serviceaccount:{{ .Values.namespace }}:default
-volume:
+volumes:
 - configMap
 - downwardAPI
 - emptyDir
