--- a/argocdod/apps/node-mongodb/templates/node-with-mongodb.yaml
+++ b/argocdod/apps/node-mongodb/templates/node-with-mongodb.yaml
@@ -28,6 +28,7 @@ metadata:
   name: {{ .Values.APPLICATION_NAME }}
   namespace: {{ .Values.namespace }}
 spec:
+  host: ""
   to:
     kind: Service
     name: {{ .Values.APPLICATION_NAME }}
