--- a/argocdod/apps/node-mongodb/Chart.yaml
+++ b/argocdod/apps/node-mongodb/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 appVersion: "1.0"
 description: "Chart to deploy Sample node.js app with mongodb in cluster"
-name: node-with-mongodb
+name: node-mongodb
 version: 1.0.0
 dependencies:
   - name: mongodb
