--- a/argocdod/templates/node-mongodb.yaml
+++ b/argocdod/templates/node-mongodb.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: node-with-mongodb-{{ template "cluster_name" . }}
+  name: node-mongodb-{{ template "cluster_name" . }}
   namespace: {{ .Values.argocdNamespace }}
 spec:
   destination:
