--- a/argocdod/apps/node-mongodb/charts/mongodb/values.yaml
+++ b/argocdod/apps/node-mongodb/charts/mongodb/values.yaml
@@ -29,7 +29,7 @@ mongodb-cluster:
   extraEnvVars: []
   annotations: {}
   labels: {}
-  replicaCount: ""
+  replicaCount: 3
   strategyType: RollingUpdate
   podManagementPolicy: OrderedReady
   affinity: {}
