--- a/argocdod/apps/node-mongodb/templates/secret.yaml
+++ b/argocdod/apps/node-mongodb/templates/secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 data:
-  DB_USERNAME: {{ index .Values "mongodb-cluster" "username" | toString | b64enc }}
-  DB_PASSWORD: {{ index .Values "mongodb-cluster" "password" | toString | b64enc }}
+  DB_USERNAME: {{ index .Values "mongodb" "username" | toString | b64enc }}
+  DB_PASSWORD: {{ index .Values "mongodb" "password" | toString | b64enc }}
 metadata:
   name: node-secret
   namespace: {{ .Values.namespace }}
