update auth values

--- a/argocdod/apps/node-mongodb/charts/mongodb/values.yaml
+++ b/argocdod/apps/node-mongodb/charts/mongodb/values.yaml
@@ -16,7 +16,7 @@ auth:
   username: ""
   password: ""
   database: ""
-replicaSetName: rs0
+replicaSetName: ""
 replicaSetHostnames: true
 enableIPv6: false
 directoryPerDB: false
