add database options

--- a/argocdod/apps/node-mongodb/templates/configmap.yaml
+++ b/argocdod/apps/node-mongodb/templates/configmap.yaml
@@ -7,3 +7,4 @@ data:
   NAMESPACE: {{ index .Values "mongodb" "global" "namespaceOverride" }}
   REPLICA_SET: {{ index .Values "mongodb" "replicaSetName" }}
   APPLICATION_NAME: {{ index .Values "mongodb" "APPLICATION_NAME" }}
+  DATABASE: {{ index .Values "mongodb" "auth" "database" }}
