--- a/argocdod/apps/node-mongodb/charts/mongodb/templates/monitoring_secret.yaml
+++ b/argocdod/apps/node-mongodb/charts/mongodb/templates/monitoring_secret.yaml
@@ -4,6 +4,6 @@ data:
   DB_USERNAME: {{ index .Values "auth" "username" | toString | b64enc }}
   DB_PASSWORD: {{ index .Values "auth" "password" | toString | b64enc }}
 metadata:
-  name: node-secret
+  name: node-secret-monitoring
   namespace: {{ index .Values "global" "namespaceOverride" }}
 type: Opaque
