--- a/argocdod/apps/node-mongodb/templates/node-with-mongodb.yaml
+++ b/argocdod/apps/node-mongodb/templates/node-with-mongodb.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: {{ .Values.namespace }}
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: {{ index .Values "mongodb" "APPLICATION_NAME" }}
