--- a/argocdod/apps/node-postgres/charts/pgcluster/templates/configmap-monitoring.yaml
+++ b/argocdod/apps/node-postgres/charts/pgcluster/templates/configmap-monitoring.yaml
@@ -4,5 +4,5 @@ metadata:
   name: node-config
   namespace: "{{.Values.PG_NAMESPACE}}"
 data:
-  APPLICATION_NAME: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
-  DATABASE: {{ index .Values "pgcluster" "PG_DATABASE_NAME" }}
+  APPLICATION_NAME: {{ index .Values "PG_CLUSTER_NAME" }}
+  DATABASE: {{ index .Values "PG_DATABASE_NAME" }}
