--- a/argocdod/apps/node-postgres/charts/pgcluster/templates/node-with-postgres-monitoring.yaml
+++ b/argocdod/apps/node-postgres/charts/pgcluster/templates/node-with-postgres-monitoring.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
+  name: {{ index .Values "PG_CLUSTER_NAME" }}
   namespace: "{{.Values.PG_NAMESPACE}}"
 spec:
   ports:
   - port: 443
     targetPort: 8443
   selector:
-    deploymentConfig: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
+    deploymentConfig: {{ index .Values "PG_CLUSTER_NAME" }}
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
@@ -16,14 +16,14 @@ metadata:
   annotations:
     description: Route for application's http service.
   labels:
-    application: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
-  name: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
+    application: {{ index .Values "PG_CLUSTER_NAME" }}
+  name: {{ index .Values "PG_CLUSTER_NAME" }}
   namespace: "{{.Values.PG_NAMESPACE}}"
 spec:
   host: ""
   to:
     kind: Service
-    name: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
+    name: {{ index .Values "PG_CLUSTER_NAME" }}
   tls:
     termination: passthrough
     insecureEdgeTerminationPolicy: Redirect
@@ -32,24 +32,24 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    application: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
-  name: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
+    application: {{ index .Values "PG_CLUSTER_NAME" }}
+  name: {{ index .Values "PG_CLUSTER_NAME" }}
   namespace: "{{.Values.PG_NAMESPACE}}"
 spec:
   replicas: 1
   selector:
-    deploymentConfig: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
+    deploymentConfig: {{ index .Values "PG_CLUSTER_NAME" }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        application: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
-        deploymentConfig: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
-      name: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
+        application: {{ index .Values "PG_CLUSTER_NAME" }}
+        deploymentConfig: {{ index .Values "PG_CLUSTER_NAME" }}
+      name: {{ index .Values "PG_CLUSTER_NAME" }}
     spec:
       containers:
-      - name: {{ index .Values "pgcluster" "PG_CLUSTER_NAME" }}
+      - name: {{ index .Values "PG_CLUSTER_NAME" }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: Always
         env:
