--- a/argocdod/apps/node-postgres/charts/pgcluster/templates/secret-monitoring.yaml
+++ b/argocdod/apps/node-postgres/charts/pgcluster/templates/secret-monitoring.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 data:
-  DB_USERNAME: {{ index .Values "pgcluster" "DB_USERNAME" | toString | b64enc }}
-  DB_PASSWORD: {{ index .Values "pgcluster" "DB_PASSWORD" | toString | b64enc }}
+  DB_USERNAME: {{ index .Values "DB_USERNAME" | toString | b64enc }}
+  DB_PASSWORD: {{ index .Values "DB_PASSWORD" | toString | b64enc }}
 metadata:
   name: node-secret
   namespace: "{{.Values.PG_NAMESPACE}}"
