--- a/argocdod/apps/minio-operator/templates/route.yaml
+++ b/argocdod/apps/minio-operator/templates/route.yaml
@@ -1,13 +1,13 @@
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
-  name: {{ .Values.name }}-route
+  name: {{ .Values.name }}
   namespace: {{ .Values.namespace }}
 spec:
   host: {{ .Values.name }}-{{ .Values.namespace }}.apps.{{ .Values.clusterName }}.{{ .Values.baseDomain }}
   to:
     kind: Service
-    name: minio-service
+    name: minio-hl-svc
     weight: 100
   port:
     targetPort: 9000
