--- a/argocdod/apps/minio-operator/templates/route.yaml
+++ b/argocdod/apps/minio-operator/templates/route.yaml
@@ -7,7 +7,7 @@ spec:
   host: {{ .Values.name }}-{{ .Values.namespace }}.apps.{{ .Values.clusterName }}.{{ .Values.baseDomain }}
   to:
     kind: Service
-    name: minio-hl-svc
+    name: minio-service
     weight: 100
   port:
     targetPort: 9000
