--- a/argocdod/templates/collectorforopenshift.yaml
+++ b/argocdod/templates/collectorforopenshift.yaml
@@ -15,3 +15,6 @@ spec:
     helm:
       valueFiles:
         - values.yaml
+      parameters:
+        - name: configmap.cluster_name
+          value: {{ template "cluster_name" . }}
