--- a/argocdod/apps/minio-operator/templates/secrets.yaml
+++ b/argocdod/apps/minio-operator/templates/secrets.yaml
@@ -7,5 +7,5 @@ metadata:
     app: {{ .Values.name }}
 type: Opaque
 data:
-  accesskey: {{ .Values.accesskey }}
-  secretkey: {{ .Values.secretkey }}
+  accesskey: minio
+  secretkey: minio123
