--- a/argocdod/apps/minio-operator/templates/secrets.yaml
+++ b/argocdod/apps/minio-operator/templates/secrets.yaml
@@ -7,5 +7,5 @@ metadata:
     app: {{ .Values.name }}
 type: Opaque
 data:
-  accesskey: {{ .Values.accesskey }}{{ .Values.accesskey | b64enc | quote }}
-  secretkey: {{ .Values.secretkey }}{{ .Values.secretkey | b64enc | quote }}
+  accesskey: {{ .Values.accesskey | b64enc | quote }}
+  secretkey: {{ .Values.secretkey | b64enc | quote }}
