--- a/argocdod/apps/node-mongodb/charts/mongodb/values.yaml
+++ b/argocdod/apps/node-mongodb/charts/mongodb/values.yaml
@@ -133,7 +133,7 @@ arbiter:
     - "--tlsAllowInvalidCertificates"
   extraEnvVars:
     - name: MONGODB_CLIENT_EXTRA_FLAGS
-      value: --ssl --tlsCertificateKeyFile=/certificates/sampleapp.pem --tlsCAFile=/certificates/sampleapp.crt
+      value: --ssl --tlsCertificateKeyFile=/certificates/sampleapp.pem --tlsCAFile=/certificates/sampleapp.crt --tlsAllowInvalidCertificates
   annotations: {}
   labels: {}
   affinity: {}
